fix layout issue on different col widths

--- a/css/story.embed.css
+++ b/css/story.embed.css
@@ -1,4 +1,4 @@
-.story-embed-box { min-height:400px; display:table; margin-bottom:10px; }
+.story-embed-box { min-height:400px; display:table; margin-bottom:10px; table-layout:fixed; }
 .story-embed-content { display:table-cell; width:100%; vertical-align:bottom; padding:25px; text-shadow: 0px 0px 10px rgba(0, 0, 0, 1); border-radius:5px; }
 .story-embed-content h1 a { color:#fff; text-decoration:none; }
 .story-embed-content h1 a:hover { color:#f1f1f1; }
